Wed Nov 11 09:36:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended Id check to detect Id:

Wed Nov 11 03:07:32 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Add support for building 32 bits.

Tue Nov 10 21:03:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/sets-manager.py:

          bugfix for windows.  note that cleaning up the temp directory doesn't
          work on windows, that will need to be done by hand.

Tue Nov 10 12:17:33  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check for hardcoded timeouts, thanks to Chad for assisting with this

Tue Nov 10 12:10:33  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          ACE_RUN_VX_TGTHOST shouldn't be used in a test script

Tue Nov 10 06:31:33  2009  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue_T.cpp (enqueue_*): When enqueuing blocks, grab the
          notifier pointer before releasing the guard; check it and do any
          needed notify() outside the lock scope. Avoids dereferencing 'this'
          when the message queue is deleted between the time the guard is
          released and the notify is checked. User is still responsible for
          ensuring the lifetime of a notifier the user supplies.
          Also, moved the monitor updates out of notify() and into the
          enqueue_* methods, inside the guard scope since they refer to
          object state; rely on the Monitor docs that say the updates are
          well-behaved.

Tue Nov 10 00:35:52 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Some changes extraneous to those in
          Wed Nov  4 00:07:49 UTC 2009  Steve Huston  <shuston@riverace.com>
          got checked in by accident; these screwed up the handle resuming