@@ -6986,7 +6986,7 @@ elif test "$ace_cv_lib_signal_vi1_2" != yes &&
    test "$ace_cv_lib_struct_sigaction_vv1_handler" != yes &&
    test "$ace_cv_lib_struct_sigaction_vi1a2_handler" != yes &&
    test "$ace_cv_lib_struct_sigaction_va1_handler" = yes; then
-  AC_DEFINE([ACE_HAS_LYNXOS_SIGNALS])
+  AC_DEFINE([ACE_HAS_LYNXOS4_SIGNALS])
   AC_DEFINE([ACE_HAS_TANDEM_SIGNALS])
 elif test "$ace_cv_lib_signal_vi1_2" = yes &&
    test "$ace_cv_lib_signal_vi1_ret" = yes &&
